--- a/KosaESS/src/main/resources/static/css/manager/manager_post_list.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_post_list.css
@@ -23,7 +23,7 @@ input, progress {
 	color: #333333;
 	font-size: 30px;
 	font-weight: bold;
-	margin: 40px;
+	margin: 40px 0px 40px 40px;
 }
 
 .title_a {
@@ -31,8 +31,10 @@ input, progress {
 	color: #333333;
 	font-size: 30px;
 	font-weight: bold;
-	margin: 40px;
+	margin: 40px 40px 40px 0px;
 	text-decoration: none;
+	color: #0E5881;
+	font-weight: bold;
 }
 
 .content_wrap {
