--- a/KosaESS/src/main/resources/templates/student/main.html
+++ b/KosaESS/src/main/resources/templates/student/main.html
@@ -79,11 +79,11 @@
 					</form>
 				</div>
 				<div th:if="${session.userEmail!=null}">
-					<div>
-						<h3 th:text="${ingClassVO == null}" style="margin: 0; width: 50%"></h3>
+					<div th:if="${ingClassVO == null}">
+						<h3></h3>
 					</div>
 					<div th:if="${ingClassVO != null}" class="inouttm">
-						<h3></h3>
+						<h3 th:text="${ingClassVO.clssNm}" ></h3>
 						<div>
 							<label for="intm"></label><span>출근 시간</span> <input type="text"
 								name="intm" id="intm" class="checktm" readonly>
@@ -96,7 +96,7 @@
 					<div class="submit"
 						style="margin-top: 0; display: grid; align-items: center;">
 						<!-- 토글 버튼 -->
-						<input class="wlogBtn" type="button" th:value="출근하기"
+						<input class="wlogBtn" type="button"
 							onclick="toggleInOut()">
 					</div>
 				</div>
@@ -138,6 +138,9 @@
 	<script th:inline="javascript">
 		/* 스크립트 내에서 Thymeleaf 변수를 선언하고 값 할당 */
 		var clssId = /*[[${ingClassVO?.clssId}]]*/'';
+		var lastInTm = /*[[${lastWlogVO?.inTm}]]*/'';
+		var lastOutTm = /*[[${lastWlogVO?.outTm}]]*/'';
+		console.log(lastInTm + lastOutTm);
 	</script>
 	<script src="/js/student/main.js"></script>
 
